--- a/app.json
+++ b/app.json
@@ -4,8 +4,15 @@
   "keywords": [
     "telegram",
     "best",
+    "youtube",
+    "downloader",
     "open",
     "source",
+    "multi",
+    "purpose",
+    "ffmpeg",
+    "remote",
+    "uploader",
     "Rename"
   ],
   "success_url": "https://telegram.dog/AnyDLBot",
